<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/provincia_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/provincia"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto"
        android:textSize="24sp"
        android:padding="3dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/sol_textview"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_below="@id/provincia_textview"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_thin"
        android:foreground="@drawable/sunbig"
        android:foregroundGravity="left|bottom"
        android:gravity="end|bottom"
        android:text="16º"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <TableLayout
        android:id="@+id/tablaIconos"
        android:fontFamily="@font/roboto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sol_textview"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:background="@drawable/layout_bg"
        android:stretchColumns="*">

        <TableRow>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/water" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/pressure" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/suns" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/wind" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/humedad"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/presion"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/cielo"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/viento"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tablaIconos"
        android:layout_margin="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/forecast"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TableLayout
        android:id="@+id/tablaSemana"
        android:fontFamily="@font/roboto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forecast"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:background="@drawable/layout_bg"
        android:stretchColumns="*">

        <TableRow>


    </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/roboto"
                android:text="@string/miercoles"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/suns" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:text="19º"
                android:textColor="@color/gold"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:fontFamily="@font/roboto"
                android:text="7"
                android:textColor="@color/white"
                android:textSize="18sp"
                />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#7E909090" />


        <TableRow
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/roboto"
                android:text="@string/jueves"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/suns" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:text="18º"
                android:textColor="@color/gold"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:fontFamily="@font/roboto"
                android:text="6"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#7E909090" />

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/roboto"
                android:text="@string/viernes"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/cloudy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:text="19º"
                android:textColor="@color/gold"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:fontFamily="@font/roboto"
                android:text="7"
                android:textColor="@color/white"
                android:textSize="18sp"
                />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#7E909090" />

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/roboto"
                android:text="@string/sabado"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/rainy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:text="15º"
                android:textColor="@color/gold"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:fontFamily="@font/roboto"
                android:text="6"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#7E909090" />

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/roboto"
                android:text="@string/domingo"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/rainy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:text="16º"
                android:textColor="@color/gold"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:fontFamily="@font/roboto"
                android:text="8"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#7E909090" />

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/roboto"
                android:text="@string/lunes"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/suns" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:text="19º"
                android:textColor="@color/gold"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:fontFamily="@font/roboto"
                android:text="7"
                android:textColor="@color/white"
                android:textSize="18sp"
                />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#7E909090" />

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/roboto"
                android:text="@string/martes"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/rainy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:text="19º"
                android:textColor="@color/gold"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:fontFamily="@font/roboto"
                android:text="11"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </TableRow>


    </TableLayout>


</RelativeLayout>